# rust-discord-bot

./: Cargo.toml
src/: lib.rs  main.rs
